# commit-critic

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
review-guides/: generic-guide.m6r
src/code_review2/: code-review2.m6r  code-review2.py
src/commit_critic/: commit-critic.m6r
