[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-review2"
version = "0.1"
authors = [
    { name="M6R", email="hello@m6r.ai" },
]
description = "Command line tool for generating code review prompts using the Metaphor format"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "m6rclib>=0.1.0"
]

[project.scripts]
code-review2 = "code_review2.main:main"

[project.urls]
Homepage = "https://github.com/m6r-ai/code-review2"
Issues = "https://github.com/m6r-ai/code-review2/issues"
